[gd_scene load_steps=5 format=2]

[ext_resource path="res://sources/minigames/MinigamePreMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/ui/Buttons/CGB01-blue_M_rounded_btn.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/UbuntuMono-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="MinigamePreMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1317, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -240.0
margin_bottom = 210.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TouchScreenButton" parent="CenterContainer"]
position = Vector2( 232, 100 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CenterContainer/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -43.0
margin_right = 108.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "Jogar!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SurrenderButton" type="TouchScreenButton" parent="CenterContainer"]
position = Vector2( 232, 250 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CenterContainer/SurrenderButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -43.0
margin_right = 108.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "Desistir"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/SurrenderButton" to="." method="_on_SurrenderButton_pressed"]
